@@ -232,6 +232,10 @@ nulloutput.devices.row2=0
 #Info: PixelController supports more than 1 universe
 #do NOT FORGET to define the output resolution above!
 #=========================
+#HINT: you define how many e1.31 panels are in use, in this example we use four panels.
+#e131.layout.row1=NO_ROTATE,NO_ROTATE
+#e131.layout.row2=NO_ROTATE,NO_ROTATE
+
 #controller ip address
 #hint, use unicast address or 239.255.0.0 for multicast 
 #e131.ip=239.255.0.0
